@@ -6119,6 +6119,12 @@
     <radar>clt</radar>
    </location>
    <location>
+    <_name>Morganton</_name>
+    <code>KMRN</code>
+    <zone>NCZ055</zone>
+    <radar>avl</radar>
+   </location>
+   <location>
     <_name>New Bern</_name>
     <code>KEWN</code>
     <zone>NCZ093</zone>
@@ -10578,6 +10584,10 @@
    <location>
     <_name>Girona</_name>
     <code>LEGE</code>
+   </location>
+   <location>
+    <_name>Cordoba/Airport</_name>
+    <code>LEBA</code>
    </location>
    <location>
     <_name>Granada</_name>
