@@ -1,3 +1,7 @@
+2004-06-24  Gareth Owen  <gowen72@yahoo.com>
+
+	* Locations.xml.in: Added Morganton, NC, USA
+
 2004-06-23  Gareth Owen  <gowen72@yahoo.com>
 
 	* Makefile.am: move location translations to a seperate domain.
